refactor(quality): migrate 22 deprecated Locale constructors to Locale.of() — S1874
- Replace new Locale("es", "MX") with Locale.of("es", "MX") in all mock-data generators