@@ -32,7 +32,7 @@ public class CardPaymentInfoDataGenerator {
     private final Random random;
 
     public CardPaymentInfoDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
         this.random = new Random();
     }
 
