@@ -30,7 +30,7 @@ public class MembershipDataGenerator {
     private final Random random;
 
     public MembershipDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
         this.random = new Random();
     }
 
