@@ -31,7 +31,7 @@ public class ScheduleDataGenerator {
     private final Random random;
 
     public ScheduleDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
         this.random = new Random();
     }
 
