@@ -21,7 +21,7 @@ public class EmailDataGenerator {
     private final Faker faker;
 
     public EmailDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
     }
 
     /**
