@@ -21,7 +21,7 @@ public class StoreProductDataGenerator {
     private final Faker faker;
 
     public StoreProductDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
     }
 
     public String name() {
