@@ -61,7 +61,7 @@ public class StoreTransactionDataGenerator {
     private final Random random;
 
     public StoreTransactionDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
         this.random = new Random();
     }
 
