@@ -22,7 +22,7 @@ public class TenantDataGenerator {
     private final Faker faker;
 
     public TenantDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
     }
 
     public String organizationName() {
