@@ -36,7 +36,7 @@ public class TenantSubscriptionDataGenerator {
     private final Random random;
 
     public TenantSubscriptionDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
         this.random = new Random();
     }
 
