@@ -27,7 +27,7 @@ public class PersonDataGenerator {
     private final Random random;
 
     public PersonDataGenerator() {
-        this.faker = new Faker(new Locale("es", "MX"));
+        this.faker = new Faker(Locale.of("es", "MX"));
         this.random = new Random();
     }
 
